fix button alignment on main page

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -11,11 +11,11 @@
   color: midnightblue;
   font-family: "Scope One", serif;
   font-size: 1em;
-  padding-left: 35em;
+  padding-left: 30em;
 }
 
 #get-started {
   justify-content: right;
   font-size: 2em;
-  margin-right: 15em;
+  margin-right: 10em;
 }
